# Scout_AI

./: .gitignore  README.md  bigquery-zi-admin-key.json  pyproject.toml  student.db
AI_assistant/: bigquery.py  create_local_db.py  query.py  slack_bot.py  slack_functions.py  test.py  vector.py
chroma_db/: chroma.sqlite3
chroma_db/93da3721-55b2-45b1-babc-60eb28748db4/: index_metadata.pickle
